Adds delegate post

--- a/_includes/contribution-footer.html
+++ b/_includes/contribution-footer.html
@@ -5,9 +5,9 @@
           title="Enjoy this blog? Consider buying me a coffee!"><img src="assets/img/author/bmc.svg?v=0248"
               alt="Buy Me A Coffee" width="231" loading="lazy"></a>
       <a href="https://github.com/sponsors/lijotech" target="_blank"
-          class="img-link btn btn-outline-light text-white bg-dark"
+          class="btn border rounded-3"
           title="Enjoy this blog? Consider sponsoring me on GitHub!"
-          style="display: inline-block; margin-left: 10px; align-content: center;"> <span
+          style="display: inline-block; margin-left: 10px; align-content: center;color:white"> <span
               class="fs-4">💖</span>
           Sponsor on GitHub</a>
   </div>
